# server/docs/swagger.json
@@ -89,6 +89,35 @@
                 }
             }
         },
+        "/dog/random": {
+            "get": {
+                "description": "Returns a random dog image URL from the Dog API.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "dog"
+                ],
+                "summary": "Returns a random dog image URL.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/health": {
             "get": {
                 "description": "Verifies that the server is running and healthy.",
@@ -101,6 +130,149 @@
                         "description": "OK",
                         "schema": {
                             "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/liked_images/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Returns a list of liked images for the user.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "liked_images"
+                ],
+                "summary": "Returns a list of liked images.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.GetLikedImagesResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Likes an image for the user.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "liked_images"
+                ],
+                "summary": "Likes an image.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Image URL",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.LikeImageRequestBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.LikeImageResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Unlikes an image for the user.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "liked_images"
+                ],
+                "summary": "Unlikes an image.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Image URL",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UnlikeImageRequestBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.UnlikeImageResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
                         }
                     }
                 }
@@ -149,7 +321,14 @@
                 "user_not_found",
                 "invalid_credentials",
                 "invalid_token",
-                "jwt_error"
+                "jwt_error",
+                "external_api_error",
+                "empty_image_url",
+                "malformed_url",
+                "invalid_image_extension",
+                "invalid_protocol",
+                "image_already_liked",
+                "image_not_liked"
             ],
             "x-enum-varnames": [
                 "InvalidEmail",
@@ -159,7 +338,14 @@
                 "UserNotFound",
                 "InvalidCredentials",
                 "InvalidToken",
-                "JWTError"
+                "JWTError",
+                "ExternalAPIError",
+                "EmptyImageURL",
+                "MalformedURL",
+                "InvalidImageExtension",
+                "InvalidProtocol",
+                "ImageAlreadyLiked",
+                "ImageNotLiked"
             ]
         },
         "models.CreateUserRequest": {
@@ -189,6 +375,42 @@
                 }
             }
         },
+        "models.GetLikedImagesResponse": {
+            "type": "object",
+            "properties": {
+                "images": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "models.LikeImageRequestBody": {
+            "type": "object",
+            "required": [
+                "imageURL"
+            ],
+            "properties": {
+                "imageURL": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.LikeImageResponse": {
+            "type": "object",
+            "properties": {
+                "images": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
         "models.LoginUserRequest": {
             "type": "object",
             "required": [
@@ -208,8 +430,30 @@
         "models.LoginUserResponse": {
             "type": "object",
             "properties": {
+                "id": {
+                    "type": "string"
+                },
                 "token": {
                     "type": "string"
+                }
+            }
+        },
+        "models.UnlikeImageRequestBody": {
+            "type": "object",
+            "required": [
+                "imageURL"
+            ],
+            "properties": {
+                "imageURL": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UnlikeImageResponse": {
+            "type": "object",
+            "properties": {
+                "success": {
+                    "type": "boolean"
                 }
             }
         },
